--- a/PRSA.ipynb
+++ b/PRSA.ipynb
@@ -4,7 +4,10 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "mount_file_id": "1JuK8lZBFq_xc3KSAF4wkFjXRg35d087V",
+      "authorship_tag": "ABX9TyMOXB5000xQn3P0OwkbLW4Y",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -1730,6 +1733,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Suriya-begin/Review-Analysis-BERT/blob/main/PRSA.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": 1,
