--- a/PRSA.ipynb
+++ b/PRSA.ipynb
@@ -1,46 +1,18 @@
-{
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4",
-      "mount_file_id": "1JuK8lZBFq_xc3KSAF4wkFjXRg35d087V",
-      "authorship_tag": "ABX9TyMOXB5000xQn3P0OwkbLW4Y",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU",
-    "widgets": {
-      "application/vnd.jupyter.widget-state+json": {
-        "5dda8cb8575949b5a6ed5f9777be6fa7": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "HBoxModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "HBoxModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "HBoxView",
-            "box_style": "",
-            "children": [
-              "IPY_MODEL_f93ffaa73ca247c8a7a921dbb3c58e5b",
-              "IPY_MODEL_8660c6bf5e4849fba58d62981bd5b971",
-              "IPY_MODEL_534f07774af44f4f8d08281319a4430d"
-            ],
-            "layout": "IPY_MODEL_457308b6e2f4431aa5d38d0c87acea6c"
-          }
-        },
+"metadata": {
+  "colab": {
+    "provenance": [],
+    "gpuType": "T4"
+  },
+  "kernelspec": {
+    "name": "python3",
+    "display_name": "Python 3"
+  },
+  "language_info": {
+    "name": "python"
+  },
+  "accelerator": "GPU"
+}
+,
         "f93ffaa73ca247c8a7a921dbb3c58e5b": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
@@ -1733,16 +1705,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Suriya-begin/Review-Analysis-BERT/blob/main/PRSA.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "execution_count": 1,
